exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is not read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "row",
      "flexGrow": "1",
      "flexShrink": "0",
      "flexWrap": "wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    }>
    <Avatar
      size={30} />
  </div>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Snippet Name"
    id="titleField"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    }
    type="text"
    underlineShow={true}
    value="" />
  <LanguageSelector
    disabled={false}
    language="python"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    } />
  <div>
    <LockButton
      onClick={[Function]}
      readOnly={false}
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": "1",
          "flexShrink": "1",
          "verticalAlign": "middle",
        }
      } />
    <SaveMenu
      canSave={true}
      enabled={true}
      id="saveMenu"
      onOrgChanged={[Function]}
      onSaveAsClick={[Function]}
      onSaveClick={[Function]}
      orgs={
        Array [
          "galactic-federation",
        ]
      }
      selectedOrg="galactic-federation"
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": "1",
          "flexShrink": "1",
          "verticalAlign": "middle",
        }
      } />
  </div>
</div>
`;

exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "row",
      "flexGrow": "1",
      "flexShrink": "0",
      "flexWrap": "wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    }>
    <Avatar
      size={30} />
  </div>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Snippet Name"
    id="titleField"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    }
    type="text"
    underlineShow={true}
    value="" />
  <LanguageSelector
    disabled={true}
    language="python"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "auto",
        "flexGrow": "1",
        "flexShrink": "1",
        "verticalAlign": "middle",
      }
    } />
  <div>
    <LockButton
      onClick={[Function]}
      readOnly={true}
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": "1",
          "flexShrink": "1",
          "verticalAlign": "middle",
        }
      } />
    <SaveMenu
      canSave={true}
      enabled={true}
      id="saveMenu"
      onOrgChanged={[Function]}
      onSaveAsClick={[Function]}
      onSaveClick={[Function]}
      orgs={
        Array [
          "galactic-federation",
        ]
      }
      selectedOrg="galactic-federation"
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": "1",
          "flexShrink": "1",
          "verticalAlign": "middle",
        }
      } />
  </div>
</div>
`;
